# poe-optimizer

./: .gitignore  .gitmodules  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  POE_Build_Optimizer_Guide_v2.md  QUICKSTART_TIMELESS_JEWEL.md  README.md  TIMELESS_JEWEL_IMPLEMENTATION_PLAN.md  analyze_tree.py  pyproject.toml  requirements.txt  run_gui.py  test_genetic_basic.py  test_jewel_optimization.py  test_manual_tree_modifications.py  test_optimizer.py  test_real_builds.py  test_relative_calculator.py
.claude/: settings.json  statusline-command.sh
docs/: BACKLOG.md  CLI_IMPLEMENTATION_PLAN.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_PLAN.md  CONFIGURATION.md  GENETIC_ALGORITHM_EXPLAINED.md  GUI_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  JEWEL_SOCKET_OPTIMIZATION_PLAN.md  MULTI_OBJECTIVE_EXPLAINED.md  PERFORMANCE.md  TROUBLESHOOTING.md  USER_GUIDE.md  v0.8-parallel-tasks.md  v0.8-planning.md
examples/: build1  build1.xml  build2  build2.xml  cyclone_shockwave  shockwavecyclonegencry.txt
notes/: README.md  SESSION_TEMPLATE.md
scripts/: README.md  benchmark_batch_evaluation.py  compare_optimizers.py  decompress_timeless_data.py  run_gem_optimizer_cyclone.py  test_gem_optimizer_e2e.py  test_genetic_optimizer.py  test_support_gem_sensitivity.py
tests/: test_account_cli.py  test_build_context.py  test_cluster_jewel.py  test_cluster_optimizer.py  test_codec.py  test_constraints.py  test_gem_optimizer.py  test_genetic_optimizer_protected.py  test_ggg_client.py  test_ggg_converter.py  test_ggg_models.py  test_jewel_registry.py  test_lua_calculator.py  test_mastery_handling.py  test_mastery_optimizer.py  test_modifier.py  test_multi_objective.py  test_node_addition.py  test_node_addition_simple.py  test_optimizer_with_masteries.py  test_pob_caller.py  test_radius_calculator.py  (+7 more)
(+133 files in other folders)
